# k9copy-reloaded

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  README  cmake_install.cmake  cmake_uninstall.cmake  config.h.cmake  k9copy.desktop  k9copy.shell  k9copy_assistant.desktop  k9copy_assistant_open.desktop  k9play.shell  main.cpp  setupUI4Qt4.sh  setupUI4Qt5.sh
cmake/: FindAvformat.cmake  FindAvutil.cmake  FindXine.cmake
data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
icons/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
po/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Messages.sh  ca.gmo  ca.po  cmake_install.cmake  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  es_AR.gmo  es_AR.po  fr.gmo  fr.po  infiles.list  it.gmo  it.po  ja.gmo  ja.po  k9copy.pot  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  rcfiles.list  ru.gmo  ru.po  sr.gmo  sr.po  sr@Latn.gmo  sr@Latn.po  (+6 more)
src/assistant/: CTestTestfile.cmake  Makefile  cmake_install.cmake  k9assistant.cpp  k9assistant.h  k9astdestination.cpp  k9astsource.cpp  k9aststreams.cpp  k9asttitles.cpp
src/backup/: backupdlg.ui  k9backupdlg.cpp  k9dvdauthor.cpp  k9dvdbackup.cpp  k9dvdbackup.h  k9execcopy.cpp  k9execcopy.h  k9mp4dlg.cpp  k9mp4enc.cpp  k9script.cpp  mp4dlg.ui
src/batch/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/core/: CTestTestfile.cmake  Makefile  bswap.h  cmake_install.cmake  k9audiocodecs.cpp  k9burndvd.cpp  k9burndvd.h  k9burnprogress.cpp  k9burnprogress.h  k9cell.cpp  k9cell.h  k9cellcopylist.h  k9common.h  k9config.cpp  k9config.h  k9dialogs.cpp  k9dvd.cpp  k9dvdbackupinterface.h  k9dvdprogress.cpp  k9dvdprogress.h  k9dvdread.cpp  k9dvdread.h  k9dvdtitle.h  k9dvdtitleset.h  k9ifo2.cpp  k9ifo2.h  k9logview.cpp  k9logview.h  k9progress.cpp  k9saveimage.h  k9tools.cpp  k9tools.h  k9videocodecs.cpp  processList.ui  progress.ui
src/devices/: CTestTestfile.cmake  Makefile  cmake_install.cmake  k9cddrive.cpp  k9cddrive.h
src/import/: CTestTestfile.cmake  Makefile  chapterEdit.ui  cmake_install.cmake  k9avidecode.cpp  k9avidecode.h  k9chapteredit.cpp  k9chapteredit.h  k9import.cpp  k9importfiles.cpp  k9importfiles.h  k9menubutton.cpp  k9menuedit.cpp  k9menuedit.h  k9newdvd.cpp  k9newtitle.cpp  k9newtitle.h  k9processlist.cpp  menuEdit.ui  newTitle.ui  processList.ui
src/libdvdnav-NOW/: dvdnav.c
src/libdvdnav-NOW/vm/: vm.c
src/libdvdread-NOW/: dvd_input.c  dvd_reader.c  dvd_udf.c
src/libdvdread-NOW/dvdread/: ifo_types.h
src/main/: configDlg.ui  k9copy.cpp  k9copy.h  k9cropselect.cpp  k9cropselect.h  k9ffmpegcmdgen.cpp  k9langselect.cpp  k9main.cpp  k9main.h  k9mencodercmdgen.cpp  k9mp4title.cpp  k9playbackoptions.cpp  k9playbackoptions.h  k9prefdirs.cpp  k9prefdvd.cpp  k9prefmencoder.cpp  k9prefmpeg4.cpp  k9prefmpeg4.h  k9prefpreview.cpp  k9settings.cpp  k9settings.h  kconfigdlg.cpp  kviewmpeg2.cpp  kviewmpeg2.h  mencoderCmdGen.ui  prefAuthor.ui  prefMPEG4.ui  prefMencoder.ui  viewmpeg2.ui
src/mpeg2/: CTestTestfile.cmake  Makefile  cmake_install.cmake  k9decodethread.cpp  k9plaympeg2.cpp
src/mplayer/: CTestTestfile.cmake  Makefile  cmake_install.cmake  k9mplayer.cpp  k9phonon.cpp  k9phonon.h  k9xine.cpp
src/player/: k9play.cpp  k9play.h  main.cpp
src/subtitles/: k9subtitle2pgm.cpp
src/vamps/: CTestTestfile.cmake  Makefile  cmake_install.cmake  k9ffmpeg.cpp  k9ffmpeg.h  k9fifo.cpp  k9requant.cpp  k9vamps.h
src/xine/: k9xineplayer.cpp  k9xineplayer.h  main.cpp
